spacing && contact form fixes

--- a/src/components/simple/Description/style.scss
+++ b/src/components/simple/Description/style.scss
@@ -3,7 +3,7 @@
 .desc{
     font-weight: 400;
     line-height: 1.68;
-    font-size: 19px;
+    font-size: 18px;
     &.light{
         color: $darkGray;
     }
