--- a/src/style.scss
+++ b/src/style.scss
@@ -135,6 +135,10 @@ button, a, input {
 
 		height: 100%;
 		min-height: 1px;
+
+		> div {
+			display: flex;
+		}
 	}
 
 	[dir='rtl'] .slick-slide {
